k8s/apps/omni-tools/deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: omni-tools
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: omni-tools
  namespace: omni-tools
  labels:
    app.kubernetes.io/name: omni-tools
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: omni-tools
  template:
    metadata:
      labels:
        app.kubernetes.io/name: omni-tools
    spec:
      containers:
        - name: omni-tools
          image: iib0011/omni-tools:0.6.0@sha256:ceb5acc317daf387634f7f212cefe4722fd1243ad1cba74203f25254195b6c69
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
          readinessProbe:
            httpGet:
              path: /
              port: http
            periodSeconds: 5
            timeoutSeconds: 3
          resources:
            requests:
              memory: "32Mi"
              cpu: "25m"
            limits:
              memory: "128Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: omni-tools
  namespace: omni-tools
  annotations:
    gatus.home-operations.com/enabled: "false"
spec:
  selector:
    app.kubernetes.io/name: omni-tools
  ports:
    - port: 80
      targetPort: 80
      name: http
