k8s/apps/omni-tools/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: omni-tools
  namespace: omni-tools
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "Omni Tools"
    gethomepage.dev/description: "All-in-one tools collection"
    gethomepage.dev/group: "tools"
    gethomepage.dev/icon: "sh-omnitools.webp"
    gethomepage.dev/href: "https://omni-tools.item.fyi"
    gethomepage.dev/siteMonitor: "http://omni-tools.omni-tools.svc.cluster.local"
    gethomepage.dev/pod-selector: "app.kubernetes.io/name=omni-tools"
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`omni-tools.item.fyi`)
      services:
        - name: keda-add-ons-http-interceptor-proxy
          namespace: keda
          port: 8080
  tls: {}
